--- a/package.json
+++ b/package.json
@@ -8,37 +8,35 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
-    "@theme-ui/preset-future": "^0.10.0",
-    "gatsby": "^3.10.2",
-    "gatsby-plugin-feed": "^3.10.0",
-    "gatsby-plugin-gatsby-cloud": "^2.10.1",
-    "gatsby-plugin-google-analytics": "^3.10.0",
-    "gatsby-plugin-google-gtag": "^3.11.0",
-    "gatsby-plugin-image": "^1.10.1",
-    "gatsby-plugin-manifest": "^3.10.0",
-    "gatsby-plugin-offline": "^4.10.0",
-    "gatsby-plugin-react-helmet": "^4.10.0",
-    "gatsby-plugin-sharp": "^3.10.2",
-    "gatsby-plugin-theme-ui": "^0.10.1",
-    "gatsby-remark-copy-linked-files": "^4.7.0",
-    "gatsby-remark-images": "^5.7.0",
-    "gatsby-remark-prismjs": "^5.7.0",
-    "gatsby-remark-responsive-iframe": "^4.7.0",
-    "gatsby-remark-smartypants": "^4.7.0",
-    "gatsby-source-filesystem": "^3.10.0",
-    "gatsby-transformer-remark": "^4.7.0",
-    "gatsby-transformer-sharp": "^3.10.0",
-    "prismjs": "^1.24.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "gatsby": "^4.0.0-zz-next.1",
+    "gatsby-plugin-feed": "^4.0.0-zz-next.1",
+    "gatsby-plugin-gatsby-cloud": "^3.2.0",
+    "gatsby-plugin-google-analytics": "^4.0.0-zz-next.1",
+    "gatsby-plugin-image": "^2.0.0-zz-next.1",
+    "gatsby-plugin-manifest": "^4.0.0-zz-next.1",
+    "gatsby-plugin-offline": "^5.0.0-zz-next.1",
+    "gatsby-plugin-react-helmet": "^5.0.0-zz-next.1",
+    "gatsby-plugin-sharp": "^4.0.0-zz-next.1",
+    "gatsby-remark-copy-linked-files": "^5.0.0-zz-next.1",
+    "gatsby-remark-images": "^6.0.0-zz-next.1",
+    "gatsby-remark-prismjs": "^6.0.0-zz-next.1",
+    "gatsby-remark-responsive-iframe": "^5.0.0-zz-next.1",
+    "gatsby-remark-smartypants": "^5.0.0-zz-next.1",
+    "gatsby-source-filesystem": "^4.0.0-zz-next.1",
+    "gatsby-transformer-remark": "^5.0.0-zz-next.1",
+    "gatsby-transformer-sharp": "^4.0.0-zz-next.1",
+    "gatsby-plugin-sass": "next",
+    "node-sass": "^6.0.1",
+    "prismjs": "^1.25.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "theme-ui": "^0.10.0",
-    "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75"
+    "typeface-merriweather": "1.1.13",
+    "typeface-montserrat": "1.1.13"
   },
   "devDependencies": {
-    "dotenv": "^8.6.0",
-    "prettier": "2.3.2"
+    "dotenv": "^10.0.0",
+    "prettier": "2.4.1"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
