--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "typeface-montserrat": "0.0.75"
   },
   "devDependencies": {
+    "dat.gui": "^0.7.7",
     "dotenv": "^10.0.0",
     "prettier": "2.5.1"
   },
